# PairNet

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pairnet/: PairNetClassifier.py  __init__.py  pairnet.py  utils_temp.py
tests/: test_pairnet.py
tests/data/: demo_1.txt
tests/data/split/: demo_1_Z.txt  demo_1_sample.txt  demo_1_test_sample.txt  demo_1_train_sample.txt  demo_1_val_sample.txt
