[tool.poetry]
name = "pairnet"
version = "0.1.0"
description = "PNL"
authors = ["syuepu"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.8.2"
torch = "^2.1.2"
scikit-learn = "^1.4.0"
numpy = "^1.26.3"
pandas = "^2.2.0"
tqdm = "^4.66.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
